* Fix for auto overflow scroll in mathjax formulas in certain cases

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/rich-text.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/rich-text.scss
@@ -31,6 +31,7 @@
     display: inline-flex;
     max-width: 100%;
     overflow-y: auto;
+    padding: 0.01em; // This prevents unnecessary scrollbars to be rendered
     vertical-align: middle;
   }
 
